# siteonyourdevice

./: .gitmodules  .travis.yml  COPYRIGHT  README.md  account.php  changelog.txt  fun.php  index.php  mysql_connect.php  output_site.php  personal_data.php  redis_connect.php  registration.php  registration_site.php  registration_site.sql  registration_user.php  server_details.html  verification_password.php
back_end/: .gitignore  CMakeLists.txt  COPYRIGHT  README.md  changelog.txt
back_end/install/siteonyourdevice/: config.in  desktop.in
back_end/install/siteonyourdevice/linux/: start.sh.in
back_end/install/siteonyourdevice/osx/: icon.icns
back_end/install/siteonyourdevice/windows/: Application.manifest.in  winres.rc.in
back_end/src/: CMakeLists.txt  client_commands.h  event_loop.cpp  event_loop.h  fasto_application.cpp  fasto_remote_application.cpp  fasto_remote_application.h  fasto_remote_gui_application.cpp  fasto_remote_gui_application.h  globals.cpp  globals.h  http_config.h  infos.cpp  infos.h  loop_controller.cpp  loop_controller.h  main.cpp  network_controller.cpp  network_controller.h  network_events.cpp  network_events.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
back_end/src/application/: fasto_application.cpp  fasto_application.h  fasto_remote_application.cpp  fasto_remote_application.h  fasto_remote_gui_application.cpp  fasto_remote_gui_application.h
back_end/src/commands/: commands.cpp  commands.h
back_end/src/http/: http_client.cpp  http_client.h  http_server.cpp  http_server.h  http_server_handler.cpp  http_server_handler.h  http_streams.cpp  http_streams.h
back_end/src/http/callbacks/: file_system_callback.cpp  file_system_callback.h  http_callbacks.cpp  http_callbacks.h  system_callback.cpp  system_callback.h
back_end/src/inner/: http_inner_server.cpp  http_inner_server.h  http_inner_server_handler.cpp  http_inner_server_handler.h  inner_client.cpp  inner_client.h  inner_relay_client.cpp  inner_relay_client.h  inner_server_command_seq_parser.cpp  inner_server_command_seq_parser.h  inner_server_handler.cpp  inner_server_handler.h
back_end/src/network/: network_controller.cpp  network_controller.h  network_event_handler.cpp  network_event_handler.h  network_events.cpp  network_events.h
back_end/src/platform/linux/: gui_fasto_application.cpp  gui_fasto_application.h
back_end/src/platform/macosx/: AppDelegate.h  AppDelegate.mm  gui_fasto_application.h  gui_fasto_application.mm
back_end/src/platform/windows/: gui_fasto_application.cpp  gui_fasto_application.h
back_end/src/resources/: win.rc.in
back_end/src/server/: CMakeLists.txt  http_server_host.cpp  http_server_host.h  inner_tcp_server.cpp  inner_tcp_server.h  main.cpp  redis_helpers.cpp  redis_helpers.h  relay_server.cpp  relay_server.h  server_commands.h  server_config.h  websocket_server.cpp  websocket_server.h
back_end/src/server/inner/: inner_tcp_client.cpp  inner_tcp_client.h  inner_tcp_server.cpp  inner_tcp_server.h
back_end/src/server/websocket/: websocket_client.cpp  websocket_client.h  websocket_server.cpp  websocket_server.h
back_end/src/tcp/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
back_end/src/websocket/: websocket_client.cpp  websocket_client.h  websocket_server.cpp  websocket_server.h  websocket_server_handler.cpp  websocket_server_handler.h
back_end/tests/: unit_test_http_clients.cpp  unit_test_tcp_server.cpp
front_end/: .gitignore  README.md  package.json  server.js
front_end/app/: amqprpc.js  routes.js
front_end/app/models/: templates.js  user.js
front_end/config/: passport.js
front_end/node/scripts/: script.js
front_end/node/style/: style.css
front_end/public/scripts/: script.js
front_end/views/: build_server_request.ejs  connect-local.ejs  index.ejs  login.ejs  profile.ejs  server_details.ejs  servers_status.ejs  signup.ejs  templates.ejs
function/: confirm_delete_account.php  confirm_delete_site.php  delete_account.php  delete_site.php  mysql_connect.php  output_site.php  personal_data.php  redact_opisanie.php  redis_connect.php  registration_site.php  registration_user.php
node/: package.json  server.js  server_details.html
node/scripts/: script.js
node/server/: server.js
node/www/: index.html
scripts/: script.js
src/: account.php  index.php  registration.php  style.css
style/: style.css
